--- a/package.json
+++ b/package.json
@@ -1,9 +1,22 @@
 {
+  "name": "sample_app",
+  "version": "1.0.0",
+  "description": "",
+  "main": "main.js",
+  "scripts": {
+    "start": "npx tsc && node dist/main.js"
+  },
   "dependencies": {
     "@metaplex-foundation/mpl-core": "^1.0.2",
     "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
+    "@metaplex-foundation/umi-uploader-irys": "^0.9.2",
     "@metaplex-foundation/umi-web3js-adapters": "^0.9.2",
-    "@solana/web3.js": "^1.95.1"
+    "@solana/web3.js": "^1.95.1",
+    "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.21"
   }
 }
